--- a/src/styles/custom-properties.css
+++ b/src/styles/custom-properties.css
@@ -1,12 +1,4 @@
 :root {
-  --leu-color-blue: #0076bd;
-  --leu-color-darkblue: #00407c;
-  --leu-color-turquoise: #00797b;
-  --leu-color-green: #1a7f1f;
-  --leu-color-bordeaux: #b01657;
-  --leu-color-magenta: #d40053;
-  --leu-color-violet: #7f3da7;
-
   --leu-color-black-100: #000000;
   --leu-color-black-80: #333333;
   --leu-color-black-60: #666666;
@@ -15,6 +7,35 @@
   --leu-color-black-10: #f0f0f0;
   --leu-color-black-5: #f7f7f7;
   --leu-color-black-0: #fffffe;
+
+  --leu-color-black-transp-80: rgba(0, 0, 0, 0.8);
+  --leu-color-black-transp-60: rgba(0, 0, 0, 0.6);
+  --leu-color-black-transp-40: rgba(0, 0, 0, 0.4);
+  --leu-color-black-transp-20: rgba(0, 0, 0, 0.2);
+  --leu-color-black-transp-10: rgba(0, 0, 0, 0.1);
+  --leu-color-black-transp-5: rgba(0, 0, 0, 0.05);
+
+  --leu-color-accent-blue: #0076bd;
+  --leu-color-accent-darkblue: #00407c;
+  --leu-color-accent-turquoise: #00797b;
+  --leu-color-accent-green: #1a7f1f;
+  --leu-color-accent-bordeaux: #b01657;
+  --leu-color-accent-magenta: #d40053;
+  --leu-color-accent-violet: #7f3da7;
+  --leu-color-accent-gray: var(--leu-color-black-60);
+
+  --leu-color-accent-blue-soft: ##edf5fa;
+  --leu-color-accent-darkblue-soft: ##e0e8ee;
+  --leu-color-accent-turquoise-soft: ##e8f3f2;
+  --leu-color-accent-green-soft: ##ebf6eb;
+  --leu-color-accent-bordeaux-soft: ##f6e3ea;
+  --leu-color-accent-magenta-soft: ##fcedf3;
+  --leu-color-accent-violet-soft: ##ece2f1;
+  --leu-color-accent-gray-soft: var(--leu-color-black-10);
+
+  --leu-color-func-cyan: #009ee0;
+  --leu-color-func-red: #d93c1a;
+  --leu-color-func-green: #1a7f1f;
 
   --leu-font-regular: HelveticaNowRegular, Helvetica, sans-serif;
   --leu-font-black: HelveticaNowBlack, Arial Black, Helvetica, sans-serif;
