fix(slider): :construction: make sure the value tooltip doesn't move outside the available width

--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -69,6 +69,7 @@
   }
 
   .slider-value {
+    display: inline-block;
     transform: translateX(var(--slider-value-offset));
     text-align: center;
     font-family: var(--slider-font-black);
@@ -77,6 +78,7 @@
   }
 
   .slider-value-track {
+    text-align: center;
     height: 22px;
   }
 
