feat(chip): add size styling

--- a/src/components/chip/chip.css
+++ b/src/components/chip/chip.css
@@ -80,6 +80,12 @@
   outline-offset: 2px;
 }
 
+:host([size="small"]:not([variant="radio"])) .button {
+  padding: 0.5rem 0.75rem;
+  font-size: 0.75rem;
+  line-height: 1;
+}
+
 :host([variant="radio"]) .button::before {
   content: "";
   width: 1rem;
