--- a/src/components/chip/chip.css
+++ b/src/components/chip/chip.css
@@ -70,7 +70,7 @@
 
   cursor: pointer;
 
-  display: flex;
+  display: inline-flex;
   align-items: center;
   gap: 0.5rem;
 }
@@ -78,6 +78,22 @@
 .button:focus-visible {
   outline: 2px solid var(--leu-color-func-cyan);
   outline-offset: 2px;
+}
+
+:host([href]) .button {
+  text-decoration: none;
+  border-radius: 1.25rem;
+  padding: 0.5rem 1rem;
+  font-family: var(--chip-font-black);
+  font-size: 1.125rem;
+  line-height: 1.5rem;
+}
+
+:host([href][size="large"]) .button {
+  font-size: 2rem;
+  line-height: 2.375rem;
+  border-radius: 1.5rem;
+  padding: 0.3125rem 1.5rem;
 }
 
 :host([size="small"]:not([variant="radio"])) .button {
