--- a/src/components/chip/chip.css
+++ b/src/components/chip/chip.css
@@ -97,7 +97,7 @@
 }
 
 :host([size="small"]:not([variant="radio"])) .button {
-  padding: 0.5rem 0.75rem;
+  padding: 0.5625rem 0.75rem 0.4375rem;
   font-size: 0.75rem;
   line-height: 1;
 }
