--- a/src/components/slider/slider.css
+++ b/src/components/slider/slider.css
@@ -90,6 +90,7 @@
     opacity: 0;
     position: relative;
     width: 100%;
+    cursor: pointer;
   }
 
   .slider-container:hover > .slider-thumb {
