--- a/src/components/menu/menu-item.css
+++ b/src/components/menu/menu-item.css
@@ -22,11 +22,13 @@
   display: flex;
   align-items: center;
   gap: 0.5rem;
+  width: 100%;
 
   padding: 0.75rem;
 
   font-size: 1rem;
   line-height: 1.5;
+  text-align: left;
 
   background: var(--background);
   color: var(--color);
@@ -43,4 +45,15 @@
 
 :host([active]) .button {
   --background: var(--background-active);
+}
+
+:is(.before, .after) svg {
+  display: block;
+}
+
+.label {
+  flex: 1;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
