feat(menu-item): add an EMPTY icon option to align the label with other items that have an icon

--- a/src/components/menu/menu-item.css
+++ b/src/components/menu/menu-item.css
@@ -57,3 +57,9 @@
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+
+.icon-placeholder {
+  display: block;
+  width: 1.5rem;
+  aspect-ratio: 1;
+}
