docs(input): document complicated css selectors constelations

--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -105,7 +105,7 @@
   order: -1;
 }
 
-/* Label styles for when the input has focus or contains a value */
+/* Label styles for when the input has focus OR contains a value */
 .label {
   position: absolute;
   left: 1rem;
@@ -114,6 +114,7 @@
   color: var(--input-label-color);
 }
 
+/* is size regular AND (has focus OR contains a value) */
 :host(:not([size])) .label,
 :host([size="regular"]) .label {
   top: calc(0.75rem - var(--input-border-width));
@@ -125,6 +126,7 @@
   transition-property: font-size, top;
 }
 
+/* is size small AND (has focus OR contains a value) */
 :host([size="small"]) .label {
   opacity: 0;
   visibility: hidden;
@@ -136,18 +138,19 @@
   content: "*";
 }
 
-/* The input is empty and has no focus */
+/* is empty AND has no focus */
 :host(:not(:focus-within)) .input-wrapper--empty .label {
   font-family: var(--input-font-regular);
   font-size: 1rem;
   top: calc(1.5rem - var(--input-border-width));
 }
 
+/* is not disabled AND has focus AND is empty */
 :host(:not([disabled], :focus-within)) .input-wrapper--empty .label {
   --input-label-color: var(--input-label-color-empty);
 }
 
-/* The input is empty and has no focus */
+/* is size small AND has no focus AND is empty */
 :host(:not(:focus-within)[size="small"]) .input-wrapper--empty .label {
   top: calc(0.75rem - var(--input-border-width));
   opacity: 1;
