feat(menu-item): add highlighted property/attribute as a way to set a style similiar to hover

--- a/src/components/menu/menu-item.css
+++ b/src/components/menu/menu-item.css
@@ -39,7 +39,8 @@
   outline-offset: 2px;
 }
 
-.button:hover {
+.button:hover,
+:host([highlighted]) .button {
   --background: var(--background-hover);
 }
 
