--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -95,8 +95,7 @@
   font-family: var(--select-font-regular);
 }
 
-.clear-button,
-.clear-filter-button {
+.clear-button {
   --_length: 1.5rem;
 
   width: var(--_length);
@@ -117,16 +116,7 @@
   border-radius: 2px;
 }
 
-.clear-button {
-  right: 2.6rem;
-}
-
-.clear-filter-button {
-  right: 0.75rem;
-}
-
-.clear-button:focus-visible,
-.clear-filter-button:focus-visible {
+.clear-button:focus-visible {
   outline: var(--select-border-width) solid var(--select-border-color-focus);
   outline-offset: 2px;
 }
@@ -215,13 +205,9 @@
   display: none;
 }
 
-.apply-container {
-  margin: 0.75rem;
-}
-
 .apply-button {
   display: block;
-  width: 100%;
+  margin: 0.75rem;
 }
 
 .select-search {
