--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -30,6 +30,13 @@ header {
   max-width: 48rem;
 }
 
+.toptopics h2 {
+  font-size: .75rem;
+  line-height: 1.5;
+  margin-bottom: .5rem;
+  padding-top: 0;
+}
+
 .toptopics ul {
   font-size: 0;
   list-style-type: none;
@@ -40,16 +47,78 @@ header {
   padding: 0;
 }
 
+@media (width >=20em) and (width <=24.99em) and (width >=20em) and (width <=24.99em) {
+  .toptopics ul {
+    margin-left:calc(16.6667% + .125rem)
+  }
+}
+
+@media (width >=20em) and (width <=24.99em) and (width >=25em) and (width <=37.49em) {
+  .toptopics ul {
+    margin-left:calc(16.6667% + .1667rem)
+  }
+}
+
+@media (width >=20em) and (width <=24.99em) and (width >=37.5em) and (width <=52.49em) {
+  .toptopics ul {
+    margin-left:calc(10% + .1rem)
+  }
+}
+
+@media (width >=20em) and (width <=24.99em) and (width >=52.5em) and (width <=63.99em) {
+  .toptopics ul {
+    margin-left:calc(11.1111% + .1667rem)
+  }
+}
+
+@media (width >=20em) and (width <=24.99em) and (width >=64em) and (width <=79.99em) {
+  .toptopics ul {
+    margin-left:calc(12.5% + .1667rem)
+  }
+}
+
+@media (width >=20em) and (width <=24.99em) and (width >=80em) {
+  .toptopics ul {
+    margin-left:calc(12.5% + .25rem)
+  }
+}
+
+@media (width >= 37.5em) {
+  .toptopics ul {
+    margin-left: -12px;
+    margin-right: -12px;
+  }
+}
+
+@media (width >=20em) and (width <=52.49em) {
+  .toptopics h2 {
+    margin-bottom:0
+  }
+}
+
+@media (width >=52.5em) {
+  .toptopics h2 {
+    margin-bottom:.25rem
+  }
+}
+
 @media (width >= 20em) and (width <= 24.99em) and (width >= 20em) and (width <= 24.99em) {
-  .toptopics {
+  .toptopics h2 {
     margin-left: calc(16.6667% + .125rem);
   }
 }
 
-leu-chip-link {
+.toptopics  li {
   display: inline-block;
-  font-family: HelveticaNowBlack,"Arial Black",Helvetica,sans-serif;
-  font-size: 1.5rem;
+  margin-right: .25rem;
+  max-width: 100%;
+}
+
+.toptopics leu-chip-link {
+  font-size: 1.125rem;
+  margin-bottom: 0;
+  margin-top: .5rem;
+  display: inline-block;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
@@ -124,40 +193,111 @@ leu-chip-link {
   width: 54px;
 }
 
-@media (width >= 320px) {
+@media (width >=320px) {
   .logo {
-    width: calc(15vw + 6px);
+    width:calc(15vw + 6px)
   }
 }
 
-@media (width >= 400px) {
+@media (width >=400px) {
   .logo {
-    height: calc(10.5vw + 24px);
+    width:calc(10.5vw + 24px)
   }
 }
 
-@media (width >= 600px) {
+@media (width >=600px) {
   .logo {
-    height: calc(15.8333vw - 8px);
+    width:calc(15.8333vw - 8px)
   }
 }
 
-@media (width >= 25em) {
+@media (width >=840px) {
   .logo {
-    padding-top: .25rem;
+    width:calc(15.2174vw - 2.8261px)
   }
 }
 
-@media (width >= 37.5em) {
+@media (width >=1024px) {
   .logo {
-    padding-top: .25rem;
+    width:calc(12.1094vw + 29px)
+  }
+}
+
+@media (width >=1280px) {
+  .logo {
+    width:184px
+  }
+}
+
+@media (width >=320px) {
+  .logo {
+    height:calc(15vw + 6px)
+  }
+}
+
+@media (width >=400px) {
+  .logo {
+    height:calc(10.5vw + 24px)
+  }
+}
+
+@media (width >=600px) {
+  .logo {
+    height:calc(15.8333vw - 8px)
+  }
+}
+
+@media (width >=840px) {
+  .logo {
+    height:calc(15.2174vw - 2.8261px)
+  }
+}
+
+@media (width >=1024px) {
+  .logo {
+    height:calc(12.1094vw + 29px)
+  }
+}
+
+@media (width >=1280px) {
+  .logo {
+    height:184px
+  }
+}
+
+@media (width >=25em) {
+  .logo {
+    padding-top:.25rem
+  }
+}
+
+@media (width >=37.5em) {
+  .logo {
+    padding-top:.25rem
+  }
+}
+
+@media (width >=52.5em) {
+  .logo {
+    padding-top:0
+  }
+}
+
+@media (width >=64em) {
+  .logo {
+    padding-top:0
+  }
+}
+
+@media (width >=80em) {
+  .logo {
+    padding-top:.25rem
   }
 }
 
 /* lead */
 .lead {
   font-size: 18px;
-  hyphens: auto;
   hyphens: auto;
   line-height: 1.3;
   margin-bottom: 1rem;
