fix(generator-script): replace hardcoded value with a placeholder

--- a/scripts/generate-component/templates/[name].css
+++ b/scripts/generate-component/templates/[name].css
@@ -7,5 +7,5 @@
   --[name]-font-regular: var(--leu-font-regular);
   --[name]-font-black: var(--leu-font-black);
 
-  font-family: var(--chip-font-regular);
+  font-family: var(--[name]-font-regular);
 }
