--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -21,6 +21,12 @@ header {
   min-height: 1.5em;
 }
 
+@media (width <= 340px) {
+  .breadcrumb {
+    margin-left: -24px;
+  }
+}
+
 .title {
   word-break: break-word;
 }
