--- a/src/components/breadcrumb/breadcrumb.css
+++ b/src/components/breadcrumb/breadcrumb.css
@@ -57,6 +57,18 @@
   margin-right: 0.25rem;
 }
 
+@media (width <= 340px) {
+  ol:not(.hidden) li:not(:first-child) {
+    display: none;
+  }
+}
+
+@media (width > 340px) {
+  ol:not(.hidden) li:first-child {
+    display: none;
+  }
+}
+
 .menu {
   background: none;
   color: inherit;
